[workspace]
members = [
    "yamaha_api",
    "yamaha_cli"
]
resolver = "3"

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"

[profile.release.package."*"]
opt-level = "z"
strip = true
codegen-units = 1

[profile.release.build-override]
opt-level = "z"
strip = true
codegen-units = 1