[package]
name = "yamaha_gui"
version = "0.1.0"
edition = "2024"

[dependencies]
yamaha_api = { path = "../yamaha_api" }
eframe = "0.31.1"
egui = "0.31.1"
egui_extras = "0.31.1"
tokio = { version = "1.45.1", features = ["full", "rt-multi-thread"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0.98"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
